fix: make the paragraph have more whitespace on tablet view

--- a/code-rad/css/responsive.css
+++ b/code-rad/css/responsive.css
@@ -27,4 +27,9 @@
     color: var(--black);
     margin-right: 20px;
   }
+
+  .pricing-table .header p {
+    width: 80%;
+    margin: 0 auto;
+  }
 }
